# Desktop_ubuntu_ROS

./: How to start xbox_360_pad_publisher  README.md
xbox_360_pad/: CMakeLists.txt  package.xml
xbox_360_pad/msg/: xbox_360_pad.msg
xbox_360_pad/src/publisher/: xbox_360_pad_publisher.py
xbox_360_pad/src/subscriber/: xbox_360_pad_motor_controller_subsciber.py
xbox_360_pad/src/testing/: pub_test.py  testing_game_pad.py  workin_test_publisher.py
